# icmc-cg

./: .gitignore  CMakeLists.txt  README.md  color.cpp  demo.cpp  glfw.cmake  hello.cpp  hello_oo.cpp  loader.cpp  projeto_1.c  projeto_1.cpp  texture.cpp
assets/: scene.txt
assets/3d_models/: dog3.mtl  dragon.mtl  lotus.mtl  newdog.mtl
assets/shaders/: color.frag  color.vert  texture.frag  texture.vert
c_src/: CMakeLists.txt  cg_window.c  cg_window.h
cpp_src/: CMakeLists.txt  cg_window.cpp  cg_window.h  cg_window.hpp  mesh_object.cpp  mesh_object.hpp  mesh_reader.cpp  mesh_reader.hpp  shader.cpp  shader.hpp  stb_image.cpp  texture.cpp  texture.hpp
src/: CMakeLists.txt
